# project1_komarov_dpo

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
