[project]
name = "project1-komarov-dpo"
version = "0.1.0"
description = "My fist dpo Python project"
authors = [
    {name = "Mikhail Komarov",email = "komarovma2017@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
[tool.poetry]
packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
