[project]
name = "project1-komarov-dpo"
version = "0.1.0"
description = "My fist dpo Python project"
authors = [
    {name = "Mikhail Komarov",email = "koma********@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
[tool.poetry]
packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []